Обёртка в ещё один executor для задач из scheduler'а